--- a/index.html
+++ b/index.html
@@ -1,1 +1,139 @@
-Home page
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>B2WIN - Cricket Betting App</title>
+    <style>
+        /* General Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #0288d1;
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
+        }
+        header h1 {
+            font-size: 2.5em;
+        }
+        nav {
+            background: #01579b;
+            padding: 10px 0;
+        }
+        nav ul {
+            list-style: none;
+            text-align: center;
+        }
+        nav ul li {
+            display: inline;
+            margin: 0 15px;
+        }
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav ul li a:hover {
+            text-decoration: underline;
+        }
+        .hero {
+            background: url('images/top.jpg') no-repeat center center/cover;
+            height: 300px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: #fff;
+            text-align: center;
+        }
+        .hero h2 {
+            font-size: 2em;
+        }
+        .content {
+            padding: 20px;
+        }
+        .features {
+            display: flex;
+            justify-content: space-around;
+            margin-top: 20px;
+        }
+        .features .feature {
+            background: #fff;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            padding: 20px;
+            width: 30%;
+            text-align: center;
+        }
+        .features .feature img {
+            max-width: 100px;
+            margin-bottom: 10px;
+        }
+        .footer {
+            background: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px 0;
+            margin-top: 20px;
+        }
+        .footer p {
+            margin: 0;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>B2WIN</h1>
+    <p>Your #1 Cricket Betting App</p>
+</header>
+
+<nav>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
+
+<div class="hero">
+    <h2>Bet Smart. Win Big.</h2>
+</div>
+
+<section class="content">
+    <h2 style="text-align:center;">Features</h2>
+    <div class="features" id="features">
+        <div class="feature">
+            <img src="images/livematch.jpg" alt="Live Matches">
+            <h3>Live Matches</h3>
+            <p>Get real-time updates on cricket matches around the globe.</p>
+        </div>
+        <div class="feature">
+            <img src="images/easybet.jpg" alt="Easy Bets">
+            <h3>Easy Bets</h3>
+            <p>Place bets effortlessly with our user-friendly platform.</p>
+        </div>
+        <div class="feature">
+            <img src="images/secqure.jpg" alt="Secure Payments">
+            <h3>Secure Payments</h3>
+            <p>Fast and secure transactions to ensure your winnings.</p>
+        </div>
+    </div>
+</section>
+
+<footer class="footer">
+    <p>&copy; 2024 B2WIN. All Rights Reserved.</p>
+</footer>
+
+</body>
+</html>
