--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                   
                   <div class="login-card" id="login">
     <h2 class="login-title">LOGIN</h2>
-    <form>
+    <form action="dashboard.html">
         <div class="input-group">
             <input type="text" placeholder="Email / Phone" required>
         </div>
