--- a/dashboard.html
+++ b/dashboard.html
@@ -80,7 +80,7 @@
 
 .badge {
   position: absolute;
-  top: 5px;
+  bottom: 170px;
   right: 10px;
   background-color: #d9534f;
   color: #fff;
@@ -216,11 +216,10 @@
       <div class="col-md-6 col-lg-6">
                  
           <div class="row"> 
-          <div class="col-md-3 col-lg-3">
+          <div class="card-img">
             <img src="images/s1.png" alt="Bamanghata Heroes League">
           </div>
           <div class="col-md-9 col-lg-9">
-            <span class="badge ongoing">ONGOING</span>
             <h5 class="title">Bamanghata Heroes League</h5>
             <p class="date">05-May-24 to 31-Dec-24</p>
             <p class="location">Kolkata</p>
@@ -234,7 +233,6 @@
             <img src="images/s2.png" alt="Winter Cup Season 1">
           </div>
           <div class="card-content">
-            <span class="badge ongoing">ONGOING</span>
             <h5 class="title">Winter Cup Season 1</h5>
             <p class="date">06-May-24 to 30-Dec-24</p>
             <p class="location">Mumbai</p>
@@ -247,7 +245,6 @@
             <img src="images/s3.png" alt="Summer Cup Season 2">
           </div>
           <div class="card-content">
-            <span class="badge ongoing">ONGOING</span>
             <h5 class="title">Summer Cup Season 2</h5>
             <p class="date">07-May-24 to 25-Dec-24</p>
             <p class="location">Delhi</p>
@@ -265,8 +262,7 @@
   <section class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; <span id="displayYear"></span> All Rights Reserved By B2WIN.AI</a>
       </p>
     </div>
   </section>
