--- a/dashboard.html
+++ b/dashboard.html
@@ -188,7 +188,7 @@
             <h5 class="title">Bamanghata Heroes League</h5>
             <p class="date">05-May-24 to 31-Dec-24</p>
             <p class="location">Kolkata</p>
-            <a href="tournamentinfo.html" class="prediction-link">Predic this Tournament</a>
+            <a href="tournamentinfo.html" class="prediction-link">Tournament Prediction</a>
           </div>
         </div>
       </div>
@@ -202,7 +202,7 @@
             <h5 class="title">Winter Cup Season 1</h5>
             <p class="date">06-May-24 to 30-Dec-24</p>
             <p class="location">Mumbai</p>
-            <a href="tournamentinfo.html" class="prediction-link">Predict this Tournament</a>
+            <a href="tournamentinfo.html" class="prediction-link">Tournament Prediction</a>
           </div>
         </div>
       </div>
@@ -216,7 +216,7 @@
             <h5 class="title">Summer Cup Season 2</h5>
             <p class="date">07-May-24 to 25-Dec-24</p>
             <p class="location">Delhi</p>
-            <a href="tournamentinfo.html" class="prediction-link">Predic this Tournament</a>
+            <a href="tournamentinfo.html" class="prediction-link">Tournament Prediction</a>
           </div>
         </div>
       </div>
@@ -233,7 +233,7 @@
             <h5 class="title">Bamanghata Heroes League 2</h5>
             <p class="date">07-May-24 to 31-Dec-24</p>
             <p class="location">Kolkata</p>
-            <a href="tournamentinfo.html" class="prediction-link">Predic this Tournament</a>
+            <a href="tournamentinfo.html" class="prediction-link">Tournament Prediction</a>
           </div>
         </div>
       </div>
@@ -247,7 +247,7 @@
             <h5 class="title">Winter Cup Season 2</h5>
             <p class="date">08-May-24 to 30-Dec-24</p>
             <p class="location">Mumbai</p>
-            <a href="tournamentinfo.html" class="prediction-link">Predic this Tournament</a>
+            <a href="tournamentinfo.html" class="prediction-link">Tournament Prediction</a>
           </div>
         </div>
       </div>
@@ -261,7 +261,7 @@
             <h5 class="title">Summer Cup Season 1</h5>
             <p class="date">10-May-24 to 25-Dec-24</p>
             <p class="location">Delhi</p>
-            <a href="tournamentinfo.html" class="prediction-link">Predic this Tournament</a>
+            <a href="tournamentinfo.html" class="prediction-link">Tournament Prediction</a>
           </div>
         </div>
       </div>
