--- a/tournamentinfo.html
+++ b/tournamentinfo.html
@@ -266,7 +266,7 @@
 
       <!-- Question 2 -->
       <div class="row align-items-center mb-3">
-        <label for="man-of-the-match" class="col-sm-3 col-form-label">1. Man of the Scries:</label>
+        <label for="man-of-the-match" class="col-sm-3 col-form-label">1. Man of the Series:</label>
         <div class="col-sm-6">
           <select class="form-control" id="man-of-the-match" required>
             <option value="" selected>Select a player</option>
@@ -296,18 +296,18 @@
         </div>
         <div class="col-sm-3">
           <select class="form-control" id="match-winner" required>
-  <option value="" selected>Betting Points</option>
+  <option value="" selected>Betting Amount</option>
   <!-- Points from 1 to 10 -->
-  <option value="1">1</option>
-  <option value="2">2</option>
-  <option value="3">3</option>
-  <option value="4">4</option>
-  <option value="5">5</option>
-  <option value="6">6</option>
-  <option value="7">7</option>
-  <option value="8">8</option>
-  <option value="9">9</option>
   <option value="10">10</option>
+  <option value="20">20</option>
+  <option value="30">30</option>
+  <option value="40">40</option>
+  <option value="50">50</option>
+  <option value="60">60</option>
+  <option value="70">70</option>
+  <option value="80">80</option>
+  <option value="90">90</option>
+  <option value="100">100</option>
 </select>
 
         </div>
@@ -315,7 +315,7 @@
 
       <!-- Question 3 -->
 <div class="row align-items-center mb-3">
-  <label for="super-iv-teams" class="col-sm-3 col-form-label">2. Chose Super VI Teams:</label>
+  <label for="super-iv-teams" class="col-sm-3 col-form-label">2. Select Super VIII Teams:</label>
   <div class="col-sm-6">
     <div class="checkbox-container">
       <div class="checkbox-group">
@@ -375,29 +375,29 @@
         </div>
       </div>
     </div>
-    <small class="form-text text-muted">Select between 6 and 6 teams.</small>
+    <small class="form-text text-muted">Select between 8 and 8 teams.</small>
   </div>
   <div class="col-sm-3">
           <select class="form-control" id="match-winner" required>
-  <option value="" selected>Betting Points</option>
+  <option value="" selected>Betting Amount</option>
   <!-- Points from 1 to 10 -->
-  <option value="1">1</option>
-  <option value="2">2</option>
-  <option value="3">3</option>
-  <option value="4">4</option>
-  <option value="5">5</option>
-  <option value="6">6</option>
-  <option value="7">7</option>
-  <option value="8">8</option>
-  <option value="9">9</option>
-  <option value="10">10</option>
+ <option value="10">10</option>
+  <option value="20">20</option>
+  <option value="30">30</option>
+  <option value="40">40</option>
+  <option value="50">50</option>
+  <option value="60">60</option>
+  <option value="70">70</option>
+  <option value="80">80</option>
+  <option value="90">90</option>
+  <option value="100">100</option>
 </select>
 
         </div>
 </div>
 <!-- Question 4 -->
 <div class="row align-items-center mb-3">
-  <label for="super-vi-teams" class="col-sm-3 col-form-label">3. Chose SemiFinal Teams:</label>
+  <label for="super-vi-teams" class="col-sm-3 col-form-label">3. Select SemiFinalist Teams:</label>
   <div class="col-sm-6">
     <div class="checkbox-container">
       <div class="checkbox-group">
@@ -461,18 +461,18 @@
   </div>
    <div class="col-sm-3">
           <select class="form-control" id="match-winner" required>
-  <option value="" selected>Betting Points</option>
+  <option value="" selected>Betting Amount</option>
   <!-- Points from 1 to 10 -->
-  <option value="1">1</option>
-  <option value="2">2</option>
-  <option value="3">3</option>
-  <option value="4">4</option>
-  <option value="5">5</option>
-  <option value="6">6</option>
-  <option value="7">7</option>
-  <option value="8">8</option>
-  <option value="9">9</option>
-  <option value="10">10</option>
+ <option value="10">10</option>
+  <option value="20">20</option>
+  <option value="30">30</option>
+  <option value="40">40</option>
+  <option value="50">50</option>
+  <option value="60">60</option>
+  <option value="70">70</option>
+  <option value="80">80</option>
+  <option value="90">90</option>
+  <option value="100">100</option>
 </select>
 
         </div>
@@ -480,7 +480,7 @@
 
 <!-- Question 4 -->
 <div class="row align-items-center mb-3">
-  <label for="super-2-teams" class="col-sm-3 col-form-label">4. Chose Finalist Teams:</label>
+  <label for="super-2-teams" class="col-sm-3 col-form-label">4. Select Finalist Teams:</label>
   <div class="col-sm-6">
     <div class="checkbox-container">
       <div class="checkbox-group">
@@ -544,25 +544,25 @@
   </div>
    <div class="col-sm-3">
           <select class="form-control" id="match-winner" required>
-  <option value="" selected>Betting Points</option>
+  <option value="" selected>Betting Amount</option>
   <!-- Points from 1 to 10 -->
-  <option value="1">1</option>
-  <option value="2">2</option>
-  <option value="3">3</option>
-  <option value="4">4</option>
-  <option value="5">5</option>
-  <option value="6">6</option>
-  <option value="7">7</option>
-  <option value="8">8</option>
-  <option value="9">9</option>
   <option value="10">10</option>
+  <option value="20">20</option>
+  <option value="30">30</option>
+  <option value="40">40</option>
+  <option value="50">50</option>
+  <option value="60">60</option>
+  <option value="70">70</option>
+  <option value="80">80</option>
+  <option value="90">90</option>
+  <option value="100">100</option>
 </select>
 
         </div>
 </div>
 
   <div class="row align-items-center mb-3">
-        <label for="match-winner" class="col-sm-3 col-form-label">5. Winner of the Scries:</label>
+        <label for="match-winner" class="col-sm-3 col-form-label">5. Winner of the Series:</label>
         <div class="col-sm-6">
           <select class="form-control" id="match-winner" required>
             <option value="" selected>Select a team</option>
@@ -577,18 +577,18 @@
         </div>
          <div class="col-sm-3">
           <select class="form-control" id="match-winner" required>
-  <option value="" selected>Betting Points</option>
+  <option value="" selected>Betting Amount</option>
   <!-- Points from 1 to 10 -->
-  <option value="1">1</option>
-  <option value="2">2</option>
-  <option value="3">3</option>
-  <option value="4">4</option>
-  <option value="5">5</option>
-  <option value="6">6</option>
-  <option value="7">7</option>
-  <option value="8">8</option>
-  <option value="9">9</option>
   <option value="10">10</option>
+  <option value="20">20</option>
+  <option value="30">30</option>
+  <option value="40">40</option>
+  <option value="50">50</option>
+  <option value="60">60</option>
+  <option value="70">70</option>
+  <option value="80">80</option>
+  <option value="90">90</option>
+  <option value="100">100</option>
 </select>
 
         </div>
