--- a/matchinfo.html
+++ b/matchinfo.html
@@ -256,18 +256,18 @@
         </div>
         <div class="col-sm-3">
           <select class="form-control" id="match-winner" required>
-  <option value="" selected>Betting Points</option>
+  <option value="" selected>Betting Amount</option>
   <!-- Points from 1 to 10 -->
-  <option value="1">1</option>
-  <option value="2">2</option>
-  <option value="3">3</option>
-  <option value="4">4</option>
-  <option value="5">5</option>
-  <option value="6">6</option>
-  <option value="7">7</option>
-  <option value="8">8</option>
-  <option value="9">9</option>
   <option value="10">10</option>
+  <option value="20">20</option>
+  <option value="30">30</option>
+  <option value="40">40</option>
+  <option value="50">50</option>
+  <option value="60">60</option>
+  <option value="70">70</option>
+  <option value="80">80</option>
+  <option value="90">90</option>
+  <option value="100">100</option>
 </select>
 
         </div>
@@ -306,18 +306,18 @@
 
         <div class="col-sm-3">
           <select class="form-control" id="match-winner" required>
-  <option value="" selected>Betting Points</option>
+  <option value="" selected>Betting Amount</option>
   <!-- Points from 1 to 10 -->
-  <option value="1">1</option>
-  <option value="2">2</option>
-  <option value="3">3</option>
-  <option value="4">4</option>
-  <option value="5">5</option>
-  <option value="6">6</option>
-  <option value="7">7</option>
-  <option value="8">8</option>
-  <option value="9">9</option>
   <option value="10">10</option>
+  <option value="20">20</option>
+  <option value="30">30</option>
+  <option value="40">40</option>
+  <option value="50">50</option>
+  <option value="60">60</option>
+  <option value="70">70</option>
+  <option value="80">80</option>
+  <option value="90">90</option>
+  <option value="100">100</option>
 </select>
 
         </div>
@@ -332,18 +332,18 @@
         
         <div class="col-sm-3">
           <select class="form-control" id="match-winner" required>
-  <option value="" selected>Betting Points</option>
+  <option value="" selected>Betting Amount</option>
   <!-- Points from 1 to 10 -->
-  <option value="1">1</option>
-  <option value="2">2</option>
-  <option value="3">3</option>
-  <option value="4">4</option>
-  <option value="5">5</option>
-  <option value="6">6</option>
-  <option value="7">7</option>
-  <option value="8">8</option>
-  <option value="9">9</option>
-  <option value="10">10</option>
+ <option value="10">10</option>
+  <option value="20">20</option>
+  <option value="30">30</option>
+  <option value="40">40</option>
+  <option value="50">50</option>
+  <option value="60">60</option>
+  <option value="70">70</option>
+  <option value="80">80</option>
+  <option value="90">90</option>
+  <option value="100">100</option>
 </select>
 
         </div>
