update index page

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                   
                   <div class="login-card" id="login">
     <h2 class="login-title">LOGIN</h2>
-   // <form action="dashboard.html">
+    <!-- <form action="dashboard.html"> -->
         <div class="input-group">
             <input type="text" id="email" placeholder="Email" required>
         </div>
@@ -111,7 +111,7 @@
             <a href="#" id="forgotP" class="forgot-password-link">Forgot Password?</a>
         </div>
         <button type="submit" onclick="login();" class="login-button">Login</button>
-    //</form>
+    <!-- </form> -->
 </div>
 
      <div class="login-card" id="forgotPassword" style="display:none;">
