--- a/index.html
+++ b/index.html
@@ -809,8 +809,8 @@ function login() {
         data: JSON.stringify({
             username: email,
             password: password,
-            devicetoken: deviceToken || "",
-            devicetype: deviceType || ""
+            devicetoken: "asdfghjklkjhgf",
+            devicetype: "mobile"
         }),
          mode: "no-cors",
         success: function (response) {
