update index page

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                   
                   <div class="login-card" id="login">
     <h2 class="login-title">LOGIN</h2>
-    <!-- <form action="dashboard.html"> -->
+    <form action="dashboard.html">
         <div class="input-group">
             <input type="text" id="email" placeholder="Email" required>
         </div>
@@ -110,8 +110,8 @@
             <a href="#" id="signup" class="create-account-link">Create New Account!</a>&nbsp;&nbsp;&nbsp;
             <a href="#" id="forgotP" class="forgot-password-link">Forgot Password?</a>
         </div>
-        <button type="submit" onclick="login();" class="login-button">Login</button>
-    <!-- </form> -->
+        <button type="submit" class="login-button">Login</button>
+    </form>
 </div>
 
      <div class="login-card" id="forgotPassword" style="display:none;">
