--- a/dashboard.html
+++ b/dashboard.html
@@ -153,13 +153,11 @@
             <ul class="navbar-nav  ">
              
               <li class="nav-item">
-                <a class="nav-link" href="profile.html">acccount</a>
+                <a class="nav-link" href="profile.html">Profile</a>
               </li>
-              <form class="form-inline">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
-                  <i class="fa fa-search" aria-hidden="true"></i>
-                </button>
-              </form>
+              <li class="nav-item">
+                <a class="nav-link" href="#" onclick="logout();">Logout</a>
+              </li>
             </ul>
           </div>
         </nav>
@@ -299,7 +297,7 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
   </script>
   <!-- End Google Map -->
-  <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
 
   <script type="text/javascript">
      document.addEventListener("DOMContentLoaded", function () {
@@ -341,9 +339,19 @@ function isTokenExpired(token) {
     }
 }
 
+function logout() {
+  localStorage.removeItem("b2Win_access_token");
+    localStorage.removeItem("b2Win_refresh_token");
+    localStorage.removeItem("b2Win_uid");
+    localStorage.removeItem("b2Win_email");
+    localStorage.removeItem("b2Win_referralCode");
+
+    window.location.href = "index.html";
+}
 
 
   </script>
+
 </body>
 
 </html>
