update e-wallet page

--- a/walletRecharge.html
+++ b/walletRecharge.html
@@ -109,7 +109,7 @@
     <!-- end header section -->
   </div>
   <!-- team section -->
-  <section class="team_section" style="padding: 25px; 0">
+  <section class="team_section" style="padding: 25px 0">
     <div class="container-fluid">
       <div class="heading_container heading_center">
         <h2 class="">
