--- a/dashboard.html
+++ b/dashboard.html
@@ -183,7 +183,9 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  ">
-             
+             <li class="nav-item">
+                <a class="nav-link" href="dashboard.html">Dashboard</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="profile.html">Profile</a>
               </li>
@@ -325,7 +327,7 @@ function renderCards(data) {
             <h5 class="title">${title}</h5>
             <p class="date">${dateRange}</p>
             <p class="location">${location}</p>
-            <a href="tournamentinfo.html" class="prediction-link">Tournament Prediction</a>
+            <a href="tournamentinfo.html?content_id=${item.contest_id}" class="prediction-link">Tournament Prediction</a>
           </div>
         </div>
       </div>
